--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>
-  {{title}}
-</h1>
+<md-toolbar color="primary">
+  <span>RxJS Pun App</span>
+</md-toolbar>
+
+<div class="body-margin">
+  <app-pun></app-pun>
+</div>
